<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yunostv="http://schemas.android.com/apk/res/com.yunos.tv.yingshi"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:paddingLeft="@dimen/tui_padding_2"
	    android:paddingTop="10dip"
	    android:paddingBottom="10dip">
	    <LinearLayout 
	        android:id="@+id/layout_search_left"
	        android:layout_width="352dip"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_gravity="left">
	        <EditText
	            android:id="@+id/et_key"
	            android:layout_width="match_parent"
	            android:layout_height="54dp"
	            android:layout_marginTop="@dimen/tui_margin_4"
	            android:background="@drawable/tui_edittext_bg"
	            android:inputType="text"
	            android:layout_gravity="center_horizontal"
	            android:gravity="center_vertical"
	            android:imeOptions="actionSearch"
	            android:textColor="@color/tui_text_color_white"
	            android:maxLength="100"
	            android:privateImeOptions="HideInputView"
	            android:drawableLeft="@drawable/search_icon"
	            android:nextFocusRight="@+id/layout_rowwrap"
	            android:textSize="@dimen/tui_text_size_2"/>
	        <com.yunos.tv.yingshi.ime.ImeBoard
	            android:id="@+id/ime_board"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent">
	        </com.yunos.tv.yingshi.ime.ImeBoard>
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/layout_search_right"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="right"
            android:layout_marginLeft="@dimen/tui_margin_7"
	        android:orientation="vertical">
	        
	        <LinearLayout
	            android:id="@+id/layout_search_example"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:gravity="left"
	    		android:paddingRight="@dimen/tui_padding_2"
			    android:orientation="vertical">
	            <LinearLayout 
	                android:id="@+id/layout_hotwords_wrap"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="vertical">
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textSize="24sp"
		                android:layout_marginTop="24dip"
		                android:layout_marginBottom="24dip"
		                android:text="@string/search_input_tip3"/>

		            <com.yunos.tv.yingshi.widget.RowWrapLayout
		                android:id="@+id/layout_rowwrap"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginBottom="24dip"
		                android:descendantFocusability="afterDescendants"
		                android:focusable="true" >

			        </com.yunos.tv.yingshi.widget.RowWrapLayout>
	            </LinearLayout>
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
	                android:textSize="@dimen/tui_text_size_2"
	                android:textColor="@color/tui_text_color_white"
		            android:text="@string/search_input_tip1"
		            android:layout_marginBottom="15dip"/>
		        <LinearLayout 
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:orientation="horizontal">
		            <LinearLayout 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:orientation="vertical">
		                <com.yunos.tv.yingshi.widget.YingshiImageView
				            android:id="@+id/image_yingshi_grid"
				            android:layout_width="@dimen/image_small_w"
				            android:layout_height="@dimen/image_small_h"
				            android:paddingLeft="4dip"
				            android:paddingRight="4dip"
				            android:paddingTop="4dip"
				            android:paddingBottom="5dip"
				            android:scaleType="fitXY"
				            android:src="@drawable/hbtr"
	        				yunostv:face="@drawable/tv_film_cover_small_normal"
				            yunostv:size="small" />
		                <TextView 
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:textSize="@dimen/tui_text_size_2"
		                    android:textColor="@color/tui_text_color_grey_2"
		                    android:layout_marginTop="10dip"
		                    android:text="@string/search_input_tip2"/>
		            </LinearLayout>
		            <TextView
		                android:id="@+id/search_tip_text"
		                android:layout_width="fill_parent"
	                    android:textSize="@dimen/tui_text_size_2"
	                    android:textColor="@color/tui_text_color_grey_2"
	                    android:layout_marginLeft="30dip"
		            	android:lineSpacingExtra="15dip"
		                android:layout_height="fill_parent"/>
		        </LinearLayout>
	        </LinearLayout>
	        <RelativeLayout 
	        	android:id="@+id/layout_search_content"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right"
		    	android:visibility="gone">
		        <LinearLayout
		            android:id="@+id/layout_search_nodata"
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
	    			android:paddingRight="200dip"
				    android:gravity="center_horizontal"
				    android:orientation="vertical"
				    android:visibility="gone">
			        <TextView
				        android:id="@+id/nodata"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="@dimen/tui_margin_8"
				        android:gravity="center"
				        android:text="@string/nodata"
				        android:textColor="@color/tui_text_color_grey"
				        android:textSize="@dimen/tui_text_size_2"/>
		        </LinearLayout>
		        <LinearLayout
		            android:id="@+id/search_type_menus"
		            android:layout_width="170dip"
		            android:layout_height="match_parent"
		            android:gravity="center_vertical|left"
		            android:layout_alignParentRight="true"
		            android:paddingLeft="30dip"
		            android:background="@drawable/tv_search_right_tab_bg"
		            android:orientation="vertical">
		            <TextView 
		                android:id="@+id/search_menu_all"
		                android:textSize="@dimen/tui_text_size_2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:tag=""
		                android:focusable="true"
		                android:focusableInTouchMode="true"
		                android:clickable="true"
		                android:layout_marginBottom="40dip"
		                android:textColor="@drawable/search_menu_color"
		                android:nextFocusLeft="@+id/listView_result_all"
		                android:text="@string/catelog_name_all"/>
		            <TextView 
		                android:id="@+id/search_menu_dianying"
		                android:textSize="@dimen/tui_text_size_2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:tag="1"
		                android:focusable="true"
		                android:focusableInTouchMode="true"
		                android:clickable="true"
		                android:layout_marginBottom="40dip"
		                android:textColor="@drawable/search_menu_color"
		                android:nextFocusLeft="@+id/listView_result_dianying"
		                android:text="@string/catelog_name_dianying"/>
		            <TextView 
		                android:id="@+id/search_menu_dianshiju"
		                android:textSize="@dimen/tui_text_size_2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:tag="3"
		                android:textColor="@drawable/search_menu_color"
		                android:focusable="true"
		                android:focusableInTouchMode="true"
		                android:clickable="true"
		                android:layout_marginBottom="40dip"
		                android:nextFocusLeft="@+id/listView_result_dianshiju"
		                android:text="@string/catelog_name_dianshiju"/>
		            <TextView 
		                android:id="@+id/search_menu_zixun"
		                android:textSize="@dimen/tui_text_size_2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:tag="0"
		                android:textColor="@drawable/search_menu_color"
		                android:focusable="true"
		                android:focusableInTouchMode="true"
		                android:clickable="true"
		                android:layout_marginBottom="40dip"
		                android:nextFocusLeft="@+id/listView_result_zixun"
		                android:text="@string/catelog_name_zixun"/>
		        </LinearLayout>
	        </RelativeLayout>
	    </LinearLayout>
	</LinearLayout>
	        
    <LinearLayout
        android:id="@+id/layout_search_loading"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center"
	    android:layout_marginLeft="400dip"
	    android:layout_marginRight="200dip"
	    android:orientation="horizontal" 
	    android:visibility="gone">
	
	    <ProgressBar
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="50dip"
	        android:layout_height="50dip" />
	<!-- 
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_marginLeft="@dimen/tui_margin_3"
	        android:gravity="center_vertical"
	        android:text="@string/loadding"
	        android:textColor="@color/tui_text_color_grey_2"
	        android:textSize="@dimen/tui_text_size_2" />
	         -->
	</LinearLayout>
	<RelativeLayout
      	android:id="@+id/layout_search_grid"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginLeft="400dip"
	    android:layout_marginRight="180dip"
	    android:layout_marginTop="0dip"
	    android:focusable="true"
	    android:descendantFocusability="afterDescendants"
	    android:visibility="gone">
        <com.yunos.tv.app.widget.FocusedListView
                android:id="@+id/listView_result_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tag=""
                
                android:layout_gravity="center_horizontal"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentBottom="true"
	            android:paddingTop="35dip"
	            android:paddingBottom="45dip"
	            android:paddingLeft="60dip"
            	android:paddingRight="60dip"
                android:listSelector="@android:color/transparent"
                android:divider="@null"
                android:dividerHeight="2dp"
                android:focusable="true"
                android:focusableInTouchMode="false" 
                android:nextFocusRight="@+id/search_menu_all"
                android:nextFocusLeft="@+id/ime_grid"
                yunostv:focus_bg="@drawable/tui_bg_focus"
                android:fadingEdgeLength="0dp"
            	android:scrollbars="none"
                android:fadingEdge="none"/>
        <com.yunos.tv.app.widget.FocusedListView
                android:id="@+id/listView_result_dianying"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tag="1"
                android:layout_gravity="center_horizontal"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentBottom="true"
	            android:paddingTop="35dip"
	            android:paddingBottom="45dip"
	            android:paddingLeft="60dip"
            	android:paddingRight="60dip"
                android:listSelector="@android:color/transparent"
                android:divider="@null"
                android:dividerHeight="2dp"
                android:focusable="true"
                android:focusableInTouchMode="false" 
                android:nextFocusRight="@+id/search_menu_dianying"
                android:nextFocusLeft="@+id/ime_grid"
                yunostv:focus_bg="@drawable/tui_bg_focus"
                android:fadingEdgeLength="0dp"
            	android:scrollbars="none"
                android:fadingEdge="none"/>
        <com.yunos.tv.app.widget.FocusedListView
                android:id="@+id/listView_result_dianshiju"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tag="3"
                android:layout_gravity="center_horizontal"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentBottom="true"
	            android:paddingTop="35dip"
	            android:paddingBottom="45dip"
	            android:paddingLeft="60dip"
            	android:paddingRight="60dip"
                android:listSelector="@android:color/transparent"
                android:divider="@null"
                android:dividerHeight="2dp"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:nextFocusRight="@+id/search_menu_dianshiju"
                android:nextFocusLeft="@+id/ime_grid"
                yunostv:focus_bg="@drawable/tui_bg_focus"
                android:fadingEdgeLength="0dp"
            	android:scrollbars="none"
                android:fadingEdge="none"/>
        <com.yunos.tv.app.widget.FocusedListView
                android:id="@+id/listView_result_zixun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tag="0"
                android:layout_gravity="center_horizontal"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentBottom="true"
	            android:paddingTop="35dip"
	            android:paddingBottom="45dip"
	            android:paddingLeft="60dip"
            	android:paddingRight="60dip"
                android:listSelector="@android:color/transparent"
                android:divider="@null"
                android:dividerHeight="2dp"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:nextFocusRight="@+id/search_menu_zixun"
                android:nextFocusLeft="@+id/ime_grid"
                yunostv:focus_bg="@drawable/tui_bg_focus"
                android:fadingEdgeLength="0dp"
            	android:scrollbars="none"
                android:fadingEdge="none"/>
        
	</RelativeLayout>
</FrameLayout>