<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yunostv="http://schemas.android.com/apk/res/com.yunos.tv.yingshi"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_search_keyboard_bg"
        android:layout_marginTop="12dip"
        android:orientation="vertical">
        <com.yunos.tv.yingshi.ime.FocusedLinearLayout 
		    android:id="@+id/layout_grid_wrap"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="12dip"
		    android:paddingLeft="12dip"
		    android:paddingRight="12dip"
		    android:paddingBottom="37dip"
		    android:background="@drawable/tv_search_keyboard_separated"
			yunostv:focus_shadow="@drawable/tv_search_keyboard_focus">
		    <com.yunos.tv.yingshi.ime.ImeGrid
		        android:id="@+id/ime_grid"
		        android:layout_gravity="top"
		        android:layout_width="match_parent"
		        android:layout_height="368dip"
	      		android:background="@drawable/tv_search_keyboard_line"
	      		yunostv:focusedItemId="@+id/ime_grid_focusitem"
	      		yunostv:listSelector="@drawable/tv_search_keyboard_focus"
	      		android:listSelector="@android:color/transparent"
		        android:nextFocusDown="@+id/btn_ime_pinyin"
		        android:nextFocusUp="@+id/et_key"
		        android:numColumns="3" />
		    <com.yunos.tv.yingshi.ime.ImeGrid
		        android:id="@+id/ime_grid_bihua"
		        android:layout_gravity="top"
		        android:layout_width="match_parent"
		        android:layout_height="276dip"
		        android:layout_marginTop="46dip"
		        android:layout_marginBottom="46dip"
	      		android:background="@drawable/tv_search_keyboard_bihua_line"
	      		yunostv:focusedItemId="@+id/ime_grid_focusitem"
	      		yunostv:listSelector="@drawable/tv_search_keyboard_focus"
	      		android:listSelector="@android:color/transparent"
		        android:visibility="gone"
		        android:nextFocusDown="@+id/btn_ime_bihua"
		        android:nextFocusUp="@+id/et_key"
		        android:numColumns="3" />
	    </com.yunos.tv.yingshi.ime.FocusedLinearLayout>
		<com.yunos.tv.yingshi.ime.FocusedLinearLayout
		    android:id="@+id/layout_ime_mode"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="-10dip"
		    android:paddingTop="10dip"
		    android:paddingLeft="12dip"
		    android:paddingRight="12dip"
		    android:paddingBottom="12dip"
			yunostv:focus_shadow="@drawable/tv_search_keyboard_btn_focus"
		    android:orientation="horizontal">
		    <com.yunos.tv.yingshi.ime.FocusedButton
		        android:id="@+id/btn_ime_t9"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        yunostv:selected_icon_left="15dip"
		        yunostv:selected_icon_top="17dip"
		        android:nextFocusUp="@+id/ime_grid"
		        yunostv:selected_icon="@drawable/ic_tv_search_keyboard_tab_selected"
		        android:background="@drawable/ime_mode_btn_t9"
		        android:text="@string/ime_mode_t9"/>
		    <com.yunos.tv.yingshi.ime.FocusedButton 
		        android:id="@+id/btn_ime_pinyin"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        yunostv:selected_icon_left="5dip"
		        yunostv:selected_icon_top="17dip"
		        android:nextFocusUp="@+id/ime_grid"
		        yunostv:selected="true"
		        yunostv:selected_icon="@drawable/ic_tv_search_keyboard_tab_selected"
		        android:background="@drawable/ime_mode_btn_pinyin"
		        android:text="@string/ime_mode_pinyin"/>
		    <com.yunos.tv.yingshi.ime.FocusedButton 
		        android:id="@+id/btn_ime_bihua"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        yunostv:selected_icon_left="5dip"
		        yunostv:selected_icon_top="17dip"
		        android:nextFocusUp="@+id/ime_grid_bihua"
		        yunostv:selected_icon="@drawable/ic_tv_search_keyboard_tab_selected"
		        android:background="@drawable/ime_mode_btn_bihua"
		        android:text="@string/ime_mode_bihua"/>
		</com.yunos.tv.yingshi.ime.FocusedLinearLayout>
	</LinearLayout>
	
    <FrameLayout
        android:id="@+id/layout_pinyin_expand"
	    android:layout_width="126dip"
	    android:layout_height="110dip"
	    android:visibility="invisible"
	    android:layout_gravity="left|top"
	    android:layout_margin="0dip"
	    android:gravity="center">
	    <TextView
	        android:id="@+id/ime_py_left"
	        android:layout_width="32dip" 
	        android:layout_height="108dip"
	        android:gravity="center"
	        android:layout_marginLeft="0dip"
	        android:focusable="true"
	        android:background="@drawable/ime_pinyin_left"
    		android:textColor="@drawable/ime_grid_text_color"
	        android:nextFocusRight="@+id/ime_py_center"
	        android:nextFocusLeft="@null"
	        android:nextFocusUp="@+id/ime_py_top"
	        android:nextFocusDown="@+id/ime_py_bottom"
	        android:textSize="@dimen/tui_text_size_2"/>
	    <TextView
	        android:id="@+id/ime_py_top"
	        android:layout_width="124dip" 
	        android:layout_height="32dip"
	        android:gravity="center"
	        android:layout_marginTop="0dip"
	        android:focusable="true"
	        android:background="@drawable/ime_pinyin_top"
    		android:textColor="@drawable/ime_grid_text_color"
	        android:nextFocusDown="@+id/ime_py_center"
	        android:nextFocusLeft="@+id/ime_py_left"
	        android:nextFocusUp="@null"
	        android:nextFocusRight="@+id/ime_py_right"
	        android:textSize="@dimen/tui_text_size_2"/>
	    <TextView
	        android:id="@+id/ime_py_right"
	        android:layout_width="32dip" 
	        android:layout_height="108dip"
	        android:gravity="center"
	        android:layout_marginLeft="92dip"
	        android:focusable="true"
	        android:background="@drawable/ime_pinyin_right"
    		android:textColor="@drawable/ime_grid_text_color"
	        android:nextFocusLeft="@+id/ime_py_center"
	        android:nextFocusUp="@+id/ime_py_top"
	        android:nextFocusRight="@null"
	        android:nextFocusDown="@+id/ime_py_bottom"
	        android:textSize="@dimen/tui_text_size_2"/>
	    <TextView
	        android:id="@+id/ime_py_bottom"
	        android:layout_width="124dip" 
	        android:layout_height="32dip"
	        android:gravity="center"
	        android:focusable="true"
	        android:layout_marginTop="75dip"
	        android:background="@drawable/ime_pinyin_bottom"
    		android:textColor="@drawable/ime_grid_text_color"
	        android:nextFocusUp="@+id/ime_py_center"
	        android:nextFocusLeft="@+id/ime_py_left"
	        android:nextFocusRight="@+id/ime_py_right"
	        android:nextFocusDown="@null"
	        android:textSize="@dimen/tui_text_size_2"/>
	    <TextView
	        android:id="@+id/ime_py_center"
	        android:layout_width="62dip"
	        android:layout_height="46dip"
	        android:layout_marginTop="31dip"
	        android:layout_marginLeft="32dip"
	        android:gravity="center"
	        android:focusable="true"
	        android:background="@drawable/ime_pinyin_center"
    		android:textColor="@drawable/ime_grid_text_color"
	        android:textSize="@dimen/tui_text_size_3"
	        android:nextFocusLeft="@+id/ime_py_left"
	        android:nextFocusUp="@+id/ime_py_top"
	        android:nextFocusRight="@+id/ime_py_right"
	        android:nextFocusDown="@+id/ime_py_bottom"/>
	</FrameLayout>
</FrameLayout>